<resources>
    <string name="app_name">Laundry App</string>
    <string name="mainapptitle">Laundry App</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Laundry App</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_services_list">Services list</string>
    <string name="menu_services_detail">Services Detail</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_cart">Cart</string>
    <string name="action_clear_cart">Clear cart</string>

    <string name="add_on">Addon</string>
    <string name="services">Top services nearby </string>
    <string name="size">Bag Size</string>
    <string name="best_deals">Best deals</string>
    <string name="menu_catalog">Services</string>
    <string name="menu_services_list_order">Service order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_up_deliver_at"><![CDATA[Pick up & Deliver at]]></string>
    <string name="title_activity_provider">ProviderActivity</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_provider_category">Categories</string>
    <string name="action_search">Search</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBNPjeXcgSNzi2Eyr1RYKDDms-eWDosvY4</string>
    <string name="update_info">Update info</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="menu_subscribe_news">News</string>

</resources>