<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        </group>
    <group android:id="@+id/sevices_group">
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_baseline_checkroom_24"
            android:title="@string/menu_catalog" />
    </group>



    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_local_mall_24"
            android:title="@string/menu_cart" />
        </group>

    <group android:id="@+id/view_orders_group">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_services_list_order" />
    </group>

    <group >
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/update_info" />
    </group>

    <group android:id="@+id/signout_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sign_out" />
    </group>




</menu>