<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="my.laundryapp.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="my.laundryapp.app.ui.catalog.CatalogFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_services_list"
        android:name="my.laundryapp.app.ui.serviceslist.ServicesListFragment"
        android:label="@string/menu_services_list"
        tools:layout="@layout/fragment_services_list" />
    <fragment
        android:id="@+id/nav_service_detail"
        android:name="my.laundryapp.app.ui.servicesdetail.serviceDetailFragment"
        android:label="@string/menu_services_detail"
        tools:layout="@layout/fragment_service_detail" />
    <fragment
        android:id="@+id/nav_service_detail1"
        android:name="my.laundryapp.app.nav_service_detail1"
        android:label="blank"
        tools:layout="@layout/nav_service_detail1" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="my.laundryapp.app.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_view_orders"
        android:name="my.laundryapp.app.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_services_list_order"
        tools:layout="@layout/fragment_view_order" />
</navigation>